Replaced user classes with roles, added Identity, added controllers according to roles. Changed models for Db. Admin settings in RoleInitializer.cs in root NixTrenProperty.

--- a/NixTrenProperty/Views/Home/Action.cshtml
+++ b/NixTrenProperty/Views/Home/Action.cshtml
@@ -24,7 +24,7 @@
                 <td>@sel.Name</td>
                 <td>@sel.Telephone</td>
                 <td>@sel.Email</td>
-                <td><a href="~/Home/GetStatistic/@sel.SellerId">Statistics</a></td>
+                <td><a href="~/Home/GetStatistic/@sel.Id">Statistics</a></td>
             </tr>
         }
     </table>
