--- a/NixTrenProperty/Views/_ViewImports.cshtml
+++ b/NixTrenProperty/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using NixTrenProperty
-@using NixTrenProperty.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+    @using NixTrenProperty.Models
+    @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@*@using Identity
+@using Identity.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers*@
+
