--- a/NixTrenProperty/Views/Account/Login.cshtml
+++ b/NixTrenProperty/Views/Account/Login.cshtml
@@ -1,5 +1,39 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model NixTrenProperty.ViewModels.LoginViewModel
 @{
+    Layout = "_Layout";
 }
+
+
+
+@*<link href="~/css/signin.css" rel="stylesheet" />*@
+<body class="bg-light">
+    <div class="text-center">
+
+        <main class="form-signin">
+            <form method="post" asp-controller="Account" asp-action="Login" asp-route-returnUrl="@Model.ReturnUrl">
+                <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+
+                <div asp-validation-summary="ModelOnly"></div>
+                <div class="form-floating">
+                    <label asp-for="UserName"></label><br />
+                    <input asp-for="UserName" />
+                    <span asp-validation-for="UserName"></span>
+                </div>
+                <div class="form-floating">
+                    <label asp-for="Password"></label><br />
+                    <input asp-for="Password" />
+                    <span asp-validation-for="Password"></span>
+                </div>
+
+                <div class="checkbox mb-3">
+                    <label>
+                        <input type="checkbox" asp-for="RememberMe" value="true"> Remember me
+                    </label>
+                </div>
+                <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            </form>
+        </main>
+    </div>
+</body>
+
+
