--- a/NixTrenProperty/Views/Home/Index.cshtml
+++ b/NixTrenProperty/Views/Home/Index.cshtml
@@ -1,1 +1,70 @@
-﻿<!
+﻿@{
+    ViewData["Title"] = "Home Page";
+    Layout = "_Layout";
+}
+
+<header>
+    <partial name="_BarAll" />
+</header>
+@*<body>
+    <div class="container py-5">
+        <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+            <h1 class="display-4 fw-normal">Make your dreams come true...</h1>
+            <p class="fs-5 text-muted"> People used to live in caves. Later they lived in castles. We live in houses or blocks of flats.</p>
+        </div>
+        <main class="flex-shrink-0">
+            <div class="row row-cols-1 row-cols-md-2 mb-2 text-center">
+                <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <partial name="_Search" />
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-4 rounded-3 shadow-sm text-right">
+                    <div class="container">
+                        <partial name="_ViewAdverts" />
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+</body>*@
+<body>   
+    <div class="container-fluid py-5">
+        <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+            <h1 class="display-4 fw-normal">Make your dreams come true...</h1>
+            <p class="fs-5 text-muted"> All we want is a big white house.</p>
+        </div>
+        <main class="flex-shrink-0">
+            <div class="row row-cols-1 row-cols-md-2 mb-2 text-center">
+                <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+
+                            <div class="row g-5">
+
+                                @*<div>
+                                    <label asp-for="City">City</label>
+                                    <select asp-for="City" asp-items="Model.Cities"></select>
+                                </div>*@
+
+                                <partial name="_Search" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-4 rounded-3 shadow-sm text-right">
+                        <div class="card-header py-3">
+
+                            <div class="row g-5">
+                                <div class="container">
+                                    <partial name="_ViewAdverts" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+</body>
