--- a/NixTrenProperty/Views/Admin/Index.cshtml
+++ b/NixTrenProperty/Views/Admin/Index.cshtml
@@ -34,6 +34,7 @@
     </div>-->
 
 
+
     <div class="container-fluid py-5">
         <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
             <h1 class="display-4 fw-normal">Make your dreams come true...</h1>
@@ -41,7 +42,7 @@
         </div>
         <main class="flex-shrink-0">
             <div class="row row-cols-1 row-cols-md-2 mb-2 text-center">
-                <div class="col">
+                <div class="clo">
                     <div class="card mb-4 rounded-3 shadow-sm">
                         <div class="card-header py-3">
 
@@ -56,6 +57,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="clo">
                     <div class="card mb-4 rounded-3 shadow-sm text-right">
                         <div class="card-header py-3">
 
@@ -71,4 +74,5 @@
         </main>
     </div>
 </body>
+
 
