--- a/NixTrenProperty/Views/Shared/_BarAdmin.cshtml
+++ b/NixTrenProperty/Views/Shared/_BarAdmin.cshtml
@@ -10,11 +10,11 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" asp-controller="User" asp-action="Index">Home</a>
+                        <a class="nav-link active" asp-controller="User" asp-action="Index">Home</a>
                     </li>                
                 </ul>
                 <form class="d-flex">                   
-                        <a class="nav-link active" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>                       
+                        <a class="nav-link active" method="post" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>                       
                 </form>
             </div>
         </div>
