--- a/NixTrenProperty/Views/Shared/_BarSeller.cshtml
+++ b/NixTrenProperty/Views/Shared/_BarSeller.cshtml
@@ -16,7 +16,7 @@
                         <a class="nav-link active" aria-current="page" asp-controller="Seller" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">                       
-                            <a class="nav-link active" asp-area="" asp-controller="User" asp-action="Cabinet">My adverts</a>                       
+                            <a class="nav-link active" asp-area="" asp-controller="Seller" asp-action="MyAdverts">My adverts</a>                       
                     </li>                   
                 </ul>
                 <form class="d-flex">                   
