--- a/NixTrenProperty/Views/Home/Index.cshtml
+++ b/NixTrenProperty/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
         </div>
         <main class="flex-shrink-0">
             <div class="row row-cols-1 row-cols-md-2 mb-2 text-center">
-                <div class="col">
+                <div class="clo">
                     <div class="card mb-4 rounded-3 shadow-sm">
                         <div class="card-header py-3">
 
@@ -53,6 +53,8 @@
                             </div>
                         </div>
                     </div>
+                    </div>
+                <div class="clo">
                     <div class="card mb-4 rounded-3 shadow-sm text-right">
                         <div class="card-header py-3">
 
@@ -63,7 +65,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>                
             </div>
         </main>
     </div>
