--- a/NixTrenProperty/Views/Seller/AddAdvert.cshtml
+++ b/NixTrenProperty/Views/Seller/AddAdvert.cshtml
@@ -2,17 +2,20 @@
     // ViewData["Title"] = "Home Page";
     Layout = "_Layout";
 }
-@*@await Html.PartialAsync("_BarAutoriz")*@
 
 
-<div class="container">
-    <main>
-        <form id="Pl" method="post" asp-controller="User" asp-action="AddAdvert">
+<header>
+    <partial name="_BarSeller" />
+</header>
+<body>
+    <div class="container">       
+        <form id="Pl" method="post" asp-controller="Seller" asp-action="AddAdvert">
             <div class="row g-5">
                 <div class="col-md-6">
 
                     <label for="country" class="col-sm-6">Type of property</label>
                     <select class="form-select" id="viewSelector" name="typeObj">
+                        <option value="0">Choose</option>
                         <option value="Plot">Plot</option>
                         <option value="House">House</option>
                         <option value="ParkingPlace">ParkingPlace</option>
@@ -29,8 +32,8 @@
             </div>
             @*<button class="w-100 btn btn-lg btn-primary" type="submit">Continue</button>*@
 
-            <label class="col-sm-6">Type of deal</label>
-            <div class="col-sm-6">
+            <label class="col-md-4">Type of deal</label>
+            <div class="col-md-4">
                 <div class="form-check">
                     <input id="credit" name="rentOrSeal" type="radio" class="form-check-input" value="true" checked required>
                     <label class="form-check-label" for="credit">Sale</label>
@@ -41,11 +44,11 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <label class="form-label">Price</label>
-                <input type="number" class="form-control" placeholder="$" value="" name="City">
+                <label class="form-label">City</label>
+                <input type="text" class="form-control" placeholder="" value="" name="City">
             </div><div class="col-sm-6">
-                <label class="form-label">Price</label>
-                <input type="number" class="form-control" placeholder="$" value="" name="Address">
+                <label class="form-label">Address</label>
+                <input type="text" class="form-control" placeholder="" value="" name="Address">
             </div>
             <div class="col-sm-12">
                 <label class="form-label">Describe condition of paiment</label>
@@ -60,22 +63,28 @@
                 <label class="form-label">Area</label>
                 <input type="number" class="form-control" placeholder="Square meters" value="" name="Area">
             </div>
-            <div class="col-md-3">
-                <input type="checkbox" class="form-check-input" id="same-address" value="true">
-                <label class="form-check-label" for="same-address">Electricity</label>
+            <div class="col-md-4">
+                @*<input type="checkbox" class="form-check-input" id="same-address">*@
+                @Html.CheckBox("Electricity", false)
+                <label class="form-check-label">Electricity</label>
+
             </div>
 
-            <div class="col-md-3">
-                <input type="checkbox" class="form-check-input" id="save-info" value="true">
-                <label class="form-check-label" for="save-info">Gas</label>
+            <div class="col-md-4">
+                @*<input type="checkbox" class="form-check-input" id="save-info">*@
+                @Html.CheckBox("Gas", false)
+                <label class="form-check-label">Gas</label>
+
             </div>
-            <div class="col-md-3">
-                <input type="checkbox" class="form-check-input" id="same-address" value="true">
+            <div class="col-md-4">
+                @*<input type="checkbox" class="form-check-input" id="same-address">*@
+                @Html.CheckBox("Plumbing", false)
                 <label class="form-check-label" for="same-address">Plumbing</label>
             </div>
 
-            <div class="col-md-3">
-                <input type="checkbox" class="form-check-input" id="save-info" value="true">
+            <div class="col-md-4">
+                @*<input type="checkbox" class="form-check-input" id="save-info">*@
+                @Html.CheckBox("Sewerage", false)
                 <label class="form-check-label" for="save-info">Sewerage</label>
             </div>
 
@@ -173,6 +182,6 @@
                 });
 
             </script>
-        </form>
-</main>
-</div>
+        </form>        
+    </div>
+</body>
