--- a/NixTrenProperty/Views/UsersControl/Create.cshtml
+++ b/NixTrenProperty/Views/UsersControl/Create.cshtml
@@ -7,7 +7,7 @@
 @{
     
 }
-<form asp-action="Create" asp-controller="Users">
+<form asp-action="Create" asp-controller="UsersControl">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Email" class="control-label">Email</label>
