--- a/NixTrenProperty/Views/UsersControl/Edit.cshtml
+++ b/NixTrenProperty/Views/UsersControl/Edit.cshtml
@@ -1,13 +1,8 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model NixTrenProperty.ViewModels.EditUserViewModel
 @{
+    
 }
-@model NixTrenProperty.ViewModels.EditUserViewModel
-@{
-    ViewBag.Title = "Редактирование пользователя";
-}
-<form asp-action="Edit" asp-controller="Users">
+<form method="post" asp-action="Edit" asp-controller="UsersControl">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <input type="hidden" asp-for="Id" />
@@ -17,10 +12,25 @@
         <input type="text" asp-for="Email" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="UserName" class="control-label">Год рождения</label>
-        <input type="number" asp-for="UserName" class="form-control" />
+        @Html.CheckBox("Rieltor", false)
+        <label class="form-check-label">Rieltor</label>
+    </div>
+
+   
+    @*<div class="form-group">
+            <label asp-for="Rieltor" class="control-label">Seller/Rieltor</label>
+            <input type="checkbox" asp-for="Rieltor" class="form-control" />
+        </div>*@
+    <div class="form-group">
+        <label asp-for="Stata.AverageDifPrice" class="control-label">Average Difference Price</label>
+        <input type="number" asp-for="Stata.AverageDifPrice" class="form-control" placeholder="1-(Last Price - First Price)*100%" />
     </div>
     <div class="form-group">
-        <input type="submit" value="Сохранить" class="btn btn-outline-secondary" />
+        <label asp-for="Stata.AverageTimeOfDeal" class="control-label">Average Time Of Deal</label>
+        <input type="number" asp-for="Stata.AverageTimeOfDeal" class="form-control" placeholder="days" />
+    </div>
+
+    <div class="form-group">
+        <input type="submit" value="Save" class="btn btn-outline-secondary" />
     </div>
 </form>
