Add Filtration/Sort/Penang, View adverts.

--- a/NixTrenProperty/Views/Account/Login.cshtml
+++ b/NixTrenProperty/Views/Account/Login.cshtml
@@ -15,9 +15,9 @@
 
                 <div asp-validation-summary="ModelOnly"></div>
                 <div class="form-floating">
-                    <label asp-for="UserName"></label><br />
-                    <input asp-for="UserName" />
-                    <span asp-validation-for="UserName"></span>
+                    <label asp-for="Email"></label><br />
+                    <input asp-for="Email" />
+                    <span asp-validation-for="Email"></span>
                 </div>
                 <div class="form-floating">
                     <label asp-for="Password"></label><br />
