--- a/NixTrenProperty/Views/Shared/_ViewAdverts.cshtml
+++ b/NixTrenProperty/Views/Shared/_ViewAdverts.cshtml
@@ -15,47 +15,54 @@
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
+
+            
             <div class="carousel-item active">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777" /></svg>
+               
+                        <div class="container">
+                            <div class="carousel-caption text-start">
 
-                <div class="container">
-                    <div class="carousel-caption text-start">
-                        @if (Model != null)
-                            @foreach (var advert in Model)
-                            {
-                                <table>
-                                    <tr>
-                                        <td>@advert.typeObj</td>
-                                        <td>
-                                            @if (advert.RentOrSeal)
-                                            {
-                                                <a>Seal</a>
-                                            }
-                                            else
-                                            {
-                                                <a>Rent</a>
-                                            }
-                                        </td>
-                                        <td>@advert.Price</td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            @advert.DateOfAdd.ToString("dd.MM.yyyy")
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                        </td>
-                                    </tr>
-                                </table>
-                                @*<script>setTimeout(2000);</script>*@
-                            }
-                            else
-                            {<a>No adverts yet</a>}
-                        <p><a class="btn btn-lg btn-primary" href="#">View details</a></p>
-                    </div>
-                </div>
+                                @if (Model != null)
+                                    @foreach (var advert in Model)
+                                    {
+                                        
+                                            <table>
+                                                <tr>
+                                                    <td>@advert.typeObj</td>
+                                                    <td>
+                                                        @if (advert.RentOrSeal)
+                                                        {
+                                                            <a>Seal</a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a>Rent</a>
+                                                        }
+                                                    </td>
+                                                    <td>@advert.Price</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>
+                                                        @advert.DateOfAdd.ToString("dd.MM.yyyy")
+                                                    </td>
+                                                    <td>
+                                                    </td>
+                                                    <td>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        break;
+                                            @*<script>setTimeout(1000);</script>*@
+                                        
+                                    }
+                                    else
+                                    {<a>No adverts yet</a>}
+                            </div>
+                        </div>
+                   
             </div>
+              
             <div class="carousel-item">
                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777" /></svg>
 
@@ -66,37 +73,37 @@
                             {
                                 if (advert.typeObj == "Apartment")
                                 {
-                                <table>
-                                    <tr>
-                                        <td>@advert.typeObj</td>
-                                        <td>
-                                            @if (advert.RentOrSeal)
-                                            {
-                                                <a>Seal</a>
-                                            }
-                                            else
-                                            {
-                                                <a>Rent</a>
-                                            }
-                                        </td>
-                                        <td>@advert.Price</td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            @advert.DateOfAdd.ToString("dd.MM.yyyy")
-                                        </td>
-                                        <td>
-                                        </td>
-                                        <td>
-                                        </td>
-                                    </tr>
-                                </table>
-                                <script>setTimeout(1000);</script>
-                                    }
+                                    <table>
+                                        <tr>
+                                            <td>@advert.typeObj</td>
+                                            <td>
+                                                @if (advert.RentOrSeal)
+                                                {
+                                                    <a>Seal</a>
+                                                }
+                                                else
+                                                {
+                                                    <a>Rent</a>
+                                                }
+                                            </td>
+                                            <td>@advert.Price</td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                @advert.DateOfAdd.ToString("dd.MM.yyyy")
+                                            </td>
+                                            <td>
+                                            </td>
+                                            <td>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <script>setTimeout(1000);</script>
                                 }
-                            else
-                            {<a>No adverts yet</a>}
-                        <p><a class="btn btn-lg btn-primary" href="#">View details</a></p>
+                            
+                          
+                        <p><a class="btn btn-lg btn-primary" method="post" asp-action="AdvertView" asp-controller="Generic" asp-for="id" asp-route-id="@advert.Id" >View details</a></p>
+                        }
                     </div>
                 </div>
             </div>
@@ -106,7 +113,7 @@
                 <div class="container">
                     <div class="carousel-caption text-end">
                         @if (Model != null)
-                        
+
                             @foreach (var advert in Model)
                             {
                                 if (advert.typeObj == "House")
@@ -139,8 +146,8 @@
                                     <script>setTimeout(1000);</script>
                                 }
                             }
-                                    else
-                        {<a>No adverts yet</a>}
+                            else
+                            {<a>No adverts yet</a>}
                         <p><a class="btn btn-lg btn-primary" href="#">View details</a></p>
                     </div>
                 </div>
