--- a/NixTrenProperty/Views/User/SearchRieltors.cshtml
+++ b/NixTrenProperty/Views/User/SearchRieltors.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Search Rieltor";
     Layout = "_Layout";
 }
-@model IEnumerable<OnionApp.Domain.Core.Seller>
+@model IEnumerable<OnionApp.Domain.Core.User>
 
 <h2>Rieltors</h2>
 <table class="table">
