--- a/NixTrenProperty/Views/UsersControl/Edit.cshtml
+++ b/NixTrenProperty/Views/UsersControl/Edit.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="form-group">
         @Html.CheckBox("Rieltor", false)
-        <label class="form-check-label">Rieltor</label>
+        <label asp-for="Rieltor" class="form-check-label">Rieltor</label>
     </div>
 
    
