--- a/NixTrenProperty/Views/Seller/MyAdverts.cshtml
+++ b/NixTrenProperty/Views/Seller/MyAdverts.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<OnionApp.Domain.Core.Advert>
+﻿@using Microsoft.AspNetCore.Identity
+@model IEnumerable<OnionApp.Domain.Core.Advert>
 @{
     {
         ViewData["Title"] = "Home Page";
@@ -11,35 +12,40 @@
     <header>
         <partial name="_BarSeller" />
     </header>
-    <p>My adverts</p>
-    @foreach (var advert in Model)
-    {
-        <table>
-            <tr>
+    <p class="lead"><h3> My adverts</h3></p>
 
-                <td>Date of first Add</td>
-                <td>Date of confirm</td>
-                <td>Type of object</td>
-                <td>Price</td>
-            </tr>
-            <tr>
+    <table>
+        <tr class="lead">
 
-                <td>@advert.DateOfAdd.ToString("dd.MM.yyyy")</td>
-                <td>@advert.Date.ToString("dd.MM.yyyy")e</td>
-                <td>@advert.typeObj</td>
-                <td>@advert.Price</td>
-                <td>
-                    <form asp-action="Delete" asp-route-id="@advert.Id" method="post">
-                        <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@advert.Id.ToString()">Confirm actuality</a>
-                        <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@advert.Id.ToString()">Change Price</a>
-                        <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@advert.Id.ToString()">Change Paiment Conditions</a>
-                        <button type="submit" class="btn btn-sm btn-danger">
-                            Delete
-                        </button>
-                    </form>
-                </td>
-            </tr>
-        </table>
-    }
+            <td>Date of first Add</td>
+            <td>Date of confirm</td>
+            <td>Type of object</td>
+            <td>Price</td>
+        </tr>
+        @foreach (var advert in Model)
+        {
+            if (advert.UserName == User.Identity.Name)
+            {
+                <tr>
+
+                    <td>@advert.DateOfAdd.ToString("dd.MM.yyyy")</td>
+                    <td>@advert.Date.ToString("dd.MM.yyyy")e</td>
+                    <td>@advert.typeObj</td>
+                    <td>@advert.Price</td>
+                    <td>
+                        <form asp-action="Delete" asp-route-id="@advert.Id" method="post">
+                            <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@advert.Id.ToString()">Confirm actuality</a>
+                            <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@advert.Id.ToString()">Change Price</a>
+                            <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@advert.Id.ToString()">Change Paiment Conditions</a>
+                            <button type="submit" class="btn btn-sm btn-danger">
+                                Delete
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+            }
+        }
+    </table>
+
 
 </body>
