--- a/NixTrenProperty/Views/Shared/_Search.cshtml
+++ b/NixTrenProperty/Views/Shared/_Search.cshtml
@@ -1,8 +1,13 @@
-﻿@using OnionApp.Domain.Core
+﻿@*@using OnionApp.Domain.Core
 @{
 }
-@model IEnumerable<Advert>
-<form method="post" asp-controller="User" asp-action="Search">
+@model IEnumerable<Advert>*@
+<form method="post" asp-controller="Home" asp-action="SortAndFilter">
+    <div>
+    <button id="But" class="w-75 btn btn-lg btn-primary" type="submit">Search Adverts</button>
+    </div>
+</form>
+@*<form>
     <h4 class="my-0 fw-normal">Search property</h4>
     <label>Type of deal</label>
     <div class="my-3">
@@ -14,26 +19,26 @@
         </div>
     </div>
 
-    
-        <div class="col-sm-8">
-            <label for="country" class="form-label">Type of property</label>
-            <select class="form-select" id="viewSelector">
-                <option value="0">Choose...</option>
-                <option value="Plot">Plot</option>
-                <option value="House">House</option>
-                <option value="ParkingPlace">ParkingPlace</option>
-                <option value="Garage">Garage</option>
-                <option value="Apartment">Apartment</option>
-                <option value="Penthouse">Penthouse</option>
-                <option value="RoomIndividual">RoomIndividual</option>
-                <option value="RoomInFlat">RoomInFlat</option>
-            </select>
-        </div>
-    
-    @*<div>
+
+    <div class="col-sm-8">
+        <label for="country" class="form-label">Type of property</label>
+        <select class="form-select" id="viewSelector">
+            <option value="0">Choose...</option>
+            <option value="Plot">Plot</option>
+            <option value="House">House</option>
+            <option value="ParkingPlace">ParkingPlace</option>
+            <option value="Garage">Garage</option>
+            <option value="Apartment">Apartment</option>
+            <option value="Penthouse">Penthouse</option>
+            <option value="RoomIndividual">RoomIndividual</option>
+            <option value="RoomInFlat">RoomInFlat</option>
+        </select>
+    </div>
+
+    <div>
             <label asp-for="City">City</label>
             <select asp-for="City" asp-items="Model.Cities"></select>
-        </div>*@
+        </div>
     <div class="col-sm-8">
         <label class="form-label">City</label>
         <input type="text" class="form-control" id="" placeholder="" value="" required name="City">
@@ -47,49 +52,49 @@
         <label class="form-label">Price max</label>
         <input type="number" class="form-control" id="" placeholder="" value="" required name="Price max">
     </div>
-    <div class="col-sm-6">        
+    <div class="col-sm-6">
         @Html.RadioButton("SortPriceMinMax", "false")
-        <span>Sale</span>
+        <span>SortPriceMinMax</span>
         @Html.RadioButton("SortPriceMaxMin", "false")
-        <span>Rent</span> <br />
+        <span>SortPriceMaxMin"</span> <br />
     </div>
     <div class="col-sm-8">
-        @*<input id="credit" name="SortPriceMinMax" type="radio" class="form-check-input" value="true">
-        <label class="form-check-label" for="credit">Sort price min-max</label>*@
-        @*<label class="form-check-label">Sort price min-Max</label>*@
-        @*@Html.CheckBox("SortPriceMinMax", false)
-        <span>Sort price min-Max</span>
+        <input id="credit" name="SortPriceMinMax" type="radio" class="form-check-input" value="true">
+            <label class="form-check-label" for="credit">Sort price min-max</label>
+        <label class="form-check-label">Sort price min-Max</label>
+        @Html.CheckBox("SortPriceMinMax", false)
+            <span>Sort price min-Max</span>
 
-        @Html.CheckBox("SortPriceMaxMin", false)*@
-        @*<span>Sort price Max-min</span>*@
+            @Html.CheckBox("SortPriceMaxMin", false)
+        <span>Sort price Max-min</span>
         <a asp-action="Index" asp-controller="Home" asp-route-sortOrder="@ViewBag.PriceSort">
             Price
         </a>
-        @*<input id="debit" name="SortPriceMaxMin" type="radio" class="form-check-input" value="false">
-        <label class="form-check-label" for="debit">Sort price max-min</label>*@
+        <input id="debit" name="SortPriceMaxMin" type="radio" class="form-check-input" value="false">
+            <label class="form-check-label" for="debit">Sort price max-min</label>
     </div>
 
     <div class="col-sm-6">
-        @*<input type="checkbox" class="form-check-input" id="same-address">*@
+        <input type="checkbox" class="form-check-input" id="same-address">
         @Html.CheckBox("Electricity", false)
         <label class="form-check-label">Electricity</label>
 
     </div>
 
     <div class="col-sm-6">
-        @*<input type="checkbox" class="form-check-input" id="save-info">*@
+        <input type="checkbox" class="form-check-input" id="save-info">
         @Html.CheckBox("Gas", false)
         <label class="form-check-label">Gas</label>
 
     </div>
     <div class="col-sm-6">
-        @*<input type="checkbox" class="form-check-input" id="same-address">*@
+        <input type="checkbox" class="form-check-input" id="same-address">
         @Html.CheckBox("Plumbing", false)
         <label class="form-check-label" for="same-address">Plumbing</label>
     </div>
 
     <div class="col-sm-6">
-        @*<input type="checkbox" class="form-check-input" id="save-info">*@
+        <input type="checkbox" class="form-check-input" id="save-info">
         @Html.CheckBox("Sewerage", false)
         <label class="form-check-label" for="save-info">Sewerage</label>
     </div>
@@ -97,9 +102,9 @@
         <button id="But" class="w-75 btn btn-lg btn-primary" type="submit" method="post" asp-controller="User" asp-action="Search">Search</button>
     </div>
 
-    @*<hr class="col-md-12">*@
+    <hr class="col-md-12">
 
-    @*<div id="AreaOfP" class="col-sm-6">
+    <div id="AreaOfP" class="col-sm-6">
               <label class="form-label">Area of plot</label>
               <input type="number" class="form-control" placeholder="Square meters" name="AreaOfPlot">
           </div>
@@ -161,29 +166,29 @@
               <input type="number" class="form-control" id="firstName" name="HowManyRoomsForOneKitchAndBath" placeholder="99">
           </div>
           <button id="But" class="w-75 btn btn-lg btn-primary" type="submit" method="post" asp-controller="User" asp-action="Search">Search</button>
-        </div>*@
+        </div>
 
     <script type="text/javascript">
-        $(function () {
-            $.viewMap = {
-                '0': $([]),
-                'Plot': $("#AreaOfP, #PlotBut, #But"),
-                'House': $("#AreaOfP , #RoomsInH, #AreaOfK, #T, #But"),
-                'ParkingPlace': $("#El, #But"),
-                'Garage': $("#El, #P, #Cel, #But"),
-                'Apartment': $("#F, #R, #K, #AreaOfK, #But"),
-                'Penthouse': $("#F, #R, #K, #AreaOfK, #P, #But"),
-                'RoomIndividual': $("#F, #KR, #B, #But"),
-                'RoomInFlat': $("#F, #H, #But")
-            };
+            $(function () {
+                $.viewMap = {
+                    '0': $([]),
+                    'Plot': $("#AreaOfP, #PlotBut, #But"),
+                    'House': $("#AreaOfP , #RoomsInH, #AreaOfK, #T, #But"),
+                    'ParkingPlace': $("#El, #But"),
+                    'Garage': $("#El, #P, #Cel, #But"),
+                    'Apartment': $("#F, #R, #K, #AreaOfK, #But"),
+                    'Penthouse': $("#F, #R, #K, #AreaOfK, #P, #But"),
+                    'RoomIndividual': $("#F, #KR, #B, #But"),
+                    'RoomInFlat': $("#F, #H, #But")
+                };
 
-            $('#viewSelector').change(function () {
-                // hide all
-                $.each($.viewMap, function () { this.hide(); });
-                // show current
-                $.viewMap[$(this).val()].show();
-            }).change();
-        });
+                $('#viewSelector').change(function () {
+                    // hide all
+                    $.each($.viewMap, function () { this.hide(); });
+                    // show current
+                    $.viewMap[$(this).val()].show();
+                }).change();
+            });
 
-    </script>
-</form>
+        </script>
+</form>*@
