New function for Admin role, Tests, vievs for different types of ObjectS.

--- a/NixTrenProperty/Views/Admin/Index.cshtml
+++ b/NixTrenProperty/Views/Admin/Index.cshtml
@@ -20,18 +20,18 @@
             <button class="w-100 btn btn-lg btn-primary" type="submit"><h4>Create user</h4></button>
         </form>
     </div>
-    <!--<div class="cla">
-        <form class="col-sm-12" method="get" asp-controller="UsersControl" asp-action="Edit">-->
+    <div class="cla">
+        <form class="col-sm-12" method="get" asp-controller="Roles" asp-action="Index">
             @*<input type="hidden" class="form-control" id="" placeholder="" value="" name="userName">*@
-            <!--<button class="w-100 btn btn-lg btn-primary" type="submit"><h4>Edit user</h4></button>
+            <button class="w-100 btn btn-lg btn-primary" type="submit"><h4>View Roles</h4></button>
         </form>
     </div>
     <div class="cla">
-        <form class="col-sm-12" method="get" asp-controller="UsersControl" asp-action="Delete">-->
+        <form class="col-sm-12" method="get" asp-controller="Roles" asp-action="Edit">
             @*<input type="hidden" class="form-control" id="" placeholder="" value="" name="userName">*@
-            <!--<button class="w-100 btn btn-lg btn-primary" type="submit"><h4>Delete user</h4></button>
+            <button class="w-100 btn btn-lg btn-primary" type="submit"><h4>Edit Roles </h4></button>
         </form>
-    </div>-->
+    </div>   
 
 
 
