--- a/NixTrenProperty/Views/Home/ViewManyLevelsApartment.cshtml
+++ b/NixTrenProperty/Views/Home/ViewManyLevelsApartment.cshtml
@@ -1,5 +1,5 @@
 ﻿@using NixTrenProperty.ViewModels
-@model AdvertViewModel<OnionApp.Domain.Core.Plot>
+@model AdvertViewModel<OnionApp.Domain.Core.ManyLevelsApartment>
 @{
     Layout = "_Layout";
 }
@@ -9,5 +9,5 @@
 </header>
 
 <body>
-   <partial name="_ViewAdvertPartial" />
+    <partial name="_ViewAdvertPartial" />
 </body>
