--- a/NixTrenProperty/Views/Shared/_ViewAdvertPartial.cshtml
+++ b/NixTrenProperty/Views/Shared/_ViewAdvertPartial.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 
-                    <table border="0" class="lead">
+                    <table border="1" align="left" class="lead" cellspacing="2" rules="rows">
                         <tr>
                             <th>Type of property</th>
                             <th>@Model.Advert.typeObj</th>
@@ -79,6 +79,6 @@
                             <th>@Model.Advert.DateOfAdd.ToString("dd.MM.yyyy")</th>
                         </tr>                      
                     </table>
-    <p><h4>Seller Telephone - @Model.User.Telephone</h4></p>
+    
                     <hr class="col-md-12">
                 
