--- a/NixTrenProperty/Views/Account/Register.cshtml
+++ b/NixTrenProperty/Views/Account/Register.cshtml
@@ -25,9 +25,9 @@
                            
                             <p class="lead">Enter your user name and email, if you want to be able to view realtors.</p>
                             <div class="col-12">
-                                @*<label asp-for="UserName" class="form-label"></label><br />
+                                <label asp-for="UserName" class="form-label"></label><br />
                                 <input asp-for="UserName" />
-                                <span asp-validation-for="UserName"></span>*@
+                                <span asp-validation-for="UserName"></span>
                                 @*<label for="username" class="form-label">Username</label>
                                     <div class="input-group has-validation">
                                         <span class="input-group-text"></span>
