--- a/NixTrenProperty/Views/Home/ViewHouse.cshtml
+++ b/NixTrenProperty/Views/Home/ViewHouse.cshtml
@@ -1,222 +1,105 @@
 ﻿@using NixTrenProperty.ViewModels
-@model AdvertViewModel<OnionApp.Domain.Core.Plot>
+@model AdvertViewModel<OnionApp.Domain.Core.House>
 @{
-        ViewData["Title"] = "Home Page";
-        Layout = "_Layout";
-    }
+    Layout = "_Layout";
+}
 
 <header>
-        <partial name="_BarAll" />
-    </header>
+    <partial name="_BarAll" />
+</header>
+
+<body>
+    <partial name="_ViewAdvertPartial" />
+</body>
+
+
 
 <body>
 
-    <table border="1" class="lead">
-        <tr>
-            <th>Type of property</th>
-            <th>@Model.Advert.typeObj</th>
-        </tr>
-        <tr>
-            <th>Type of deal</th>
-            <th>
-                @if (Model.Advert.RentOrSeal)
-                {
-                    <p>Seal</p> }
-                else
-                { <p>Rent</p>}
-            </th>
-        </tr>
-        <tr>
-            <th>City</th>
-            <th>@Model.Advert.City</th>
-        </tr>
-        <tr>
-            <th>Address</th>
-            <th>@Model.Object.Address</th>
-        </tr>
-        <tr>
-            <th>Paiment Conditions</th>
-            <th>@Model.Advert.PaimentConditions</th>
-        </tr>
-        <tr>
-            <th>Area</th>
-            <th>@Model.Object.Area</th>
-        </tr>
-        <tr>
-            <th>Electricity</th>
-            <th>
-                @if (Model.Object.Electricity)
-                {
-                    <p>yes</p> }
-                else
-                { <p>no</p>}
-            </th>
-        </tr>
-        <tr>
-            <th>Gas</th>
-            <th>
-                @if (Model.Object.Gas)
-                {
-                    <p>yes</p> }
-                else
-                { <p>no</p>}
-            </th>
-        </tr>
-        <tr>
-            <th>Plumbing</th>
-            <th>
-                @if (Model.Object.Plumbing)
-                {
-                    <p>yes</p> }
-                else
-                { <p>no</p>}
-            </th>
-        </tr>
-        <tr>
-            <th>Sewerage</th>
-            <th>
-                @if (Model.Object.Sewerage)
-                {<p>yes</p> }
-                else
-                { <p>no</p>}
-            </th>
-        </tr>
-        <tr>
-            <th>Date of add</th>
-            <th>@Model.Advert.DateOfAdd</th>
-        </tr>
-    </table>
+
     <p><h3>Seller Telephone - @Model.User.Telephone</h3></p>
-    <hr class="col-md-12">
 
-    <div class="container">
-        <p for="country" class="col-sm-6">Type of property - @Model.Advert.typeObj</p><br>
-        <p for="country" class="col-sm-6">
-            Type of deal -
-            @if (Model.Advert.RentOrSeal)
-            {
-            <p>Seal</p> }
-        else
-        { <p>Rent</p>}
-            <label class="col-sm-6">Date of add  - @Model.Advert.Price</label>
-            <label for="country" class="col-sm-6">City - @Model.Advert.City</label>
-            <label for="country" class="col-sm-6">Address - @Model.Object.Address</label>
-            <p>Date of add  - @Model.Advert.DateOfAdd</p>
-            <p typeof="textarea" class="col-sm-6"> @Model.Advert.PaimentConditions</p>
-            <p class="col-sm-6">Type of property - @Model.Object.Area</p>
-            <p class="col-sm-6">
-                Electricity -
-                @if (Model.Object.Electricity)
-                {
-                <p>yes</p> }
-            else
-            { <p>no</p>}
-                <p class="col-sm-6">
-                    Gas -
-                    @if (Model.Object.Gas)
-                    {
-                    <p>yes</p> }
-                else
-                { <p>no</p>}
-                    <p class="col-sm-6">
-                        Plumbing -
-                        @if (Model.Object.Plumbing)
-                        {
-                        <p>yes</p> }
-                    else
-                    { <p>no</p>}
-                        <p class="col-sm-6">
-                            Sewerage -
-                        </p>
-                        @if (Model.Object.Sewerage)
-                        {<p>yes</p> }
-                        else
-                        { <p>no</p>}
+    <p class="col-sm-6"> Area Of Plot - @Model.Object.AreaOfPlot</p>
+    <p class="col-sm-6"> Namber of rooms - @Model.Object.RoomsInHouse</p>
+    <p class="col-sm-6"> Area Of Kitchen- @Model.Object.AreaOfKitchen</p>
+    <p class="col-sm-6">
+        TownHouse -
+    </p>
+    @if (Model.Object.TownHouse)
+    {
+        <p>yes</p> }
+    else
+    { <p>no</p>}
 
-                        @if (Model.Advert.typeObj == "House")
-                        {
-                            <p class="col-sm-6"> Area Of Plot - @Model.Object.AreaOfPlot</p>
-                            <p class="col-sm-6"> Namber of rooms - @Model.Object.RoomsInHouse</p>
-                            <p class="col-sm-6"> Area Of Kitchen- @Model.Object.AreaOfKitchen</p>
-                            <p class="col-sm-6">
-                                TownHouse -
-                            </p>
-                            @if (Model.Object.TownHouse)
-                            {
-                                <p>yes</p> }
-                            else
-                            { <p>no</p>}
-                        }
-                    </div>
-                </body>
+</body>
 
 
-                @*@if (@Model.Advert.typeObj == "House")
-                    {
-                        <p class="col-sm-6"> Area Of Plot - @Model.Object.AreaOfPlot</p>
-                    }*@
+@*@if (@Model.Advert.typeObj == "House")
+    {
+        <p class="col-sm-6"> Area Of Plot - @Model.Object.AreaOfPlot</p>
+    }*@
 
 
 
-                @*<div id="AreaOfP" class="col-sm-6">
-                        <label class="form-label">Area of plot</label>
-                        <input type="number" class="form-control" placeholder="Square meters" name="AreaOfPlot">
-                    </div>
-                    <div id="RoomsInH" class="col-sm-6">
-                        <label class="form-label">Number of rooms</label>
-                        <input type="number" class="form-control" id="" placeholder="" name="RoomsInHouse">
-                    </div>
-                    <div id="AreaOfK" class="col-sm-6">
-                        <label class="form-label">Area Of Kitchen</label>
-                        <input type="number" class="form-control" id="" placeholder="Square meters" name="AreaOfKitchen">
-                    </div>
-                    <div id="T" class="col-md-4">
-                        <label class="form-label">TownHouse</label>
-                        @Html.CheckBox("TownHouse", false)
-                    </div>
-                    <div id="El" class="my-3">
-                        <div class="col-md-4">
-                            <input type="checkbox" class="form-check-input" id="" name="ElectricForEcar" value="false">
-                            <label class="form-check-label">Electricity for ecar</label>
-                        </div>
-                    </div>
+@*<div id="AreaOfP" class="col-sm-6">
+        <label class="form-label">Area of plot</label>
+        <input type="number" class="form-control" placeholder="Square meters" name="AreaOfPlot">
+    </div>
+    <div id="RoomsInH" class="col-sm-6">
+        <label class="form-label">Number of rooms</label>
+        <input type="number" class="form-control" id="" placeholder="" name="RoomsInHouse">
+    </div>
+    <div id="AreaOfK" class="col-sm-6">
+        <label class="form-label">Area Of Kitchen</label>
+        <input type="number" class="form-control" id="" placeholder="Square meters" name="AreaOfKitchen">
+    </div>
+    <div id="T" class="col-md-4">
+        <label class="form-label">TownHouse</label>
+        @Html.CheckBox("TownHouse", false)
+    </div>
+    <div id="El" class="my-3">
+        <div class="col-md-4">
+            <input type="checkbox" class="form-check-input" id="" name="ElectricForEcar" value="false">
+            <label class="form-check-label">Electricity for ecar</label>
+        </div>
+    </div>
 
-                    <div id="P" class="col-md-4">
-                        <input type="checkbox" class="form-check-input" id="save-info" name="Pit" value="false">
-                        <label class="form-check-label" for="save-info" name="Pit">Pit</label>
-                    </div>
-                    <div id="Cel" class="col-md-4">
-                        <input type="checkbox" class="form-check-input" id="save-info" name="Cellar" value="false">
-                        <label class="form-check-label" for="save-info">Cellar</label>
-                    </div>
-                    <div id="R" class="col-sm-6">
-                        <label for="firstName" class="form-label">Rooms</label>
-                        <input type="number" class="form-control" id="firstName" name="Rooms" placeholder="">
-                    </div>
+    <div id="P" class="col-md-4">
+        <input type="checkbox" class="form-check-input" id="save-info" name="Pit" value="false">
+        <label class="form-check-label" for="save-info" name="Pit">Pit</label>
+    </div>
+    <div id="Cel" class="col-md-4">
+        <input type="checkbox" class="form-check-input" id="save-info" name="Cellar" value="false">
+        <label class="form-check-label" for="save-info">Cellar</label>
+    </div>
+    <div id="R" class="col-sm-6">
+        <label for="firstName" class="form-label">Rooms</label>
+        <input type="number" class="form-control" id="firstName" name="Rooms" placeholder="">
+    </div>
 
-                    <div id="F" class="col-sm-6">
-                        <label for="firstName" class="form-label">Flor</label>
-                        <input type="number" class="form-control" id="firstName" name="Floor" placeholder="">
-                    </div>
-                    <div id="K" class="col-md-7">
-                        <input type="checkbox" class="form-check-input" id="same-address" name="KitchenWithRoom" value="false">
-                        <label class="form-check-label" for="save-info">Kitchen combined with a room</label>
-                    </div>
-                    <div id="P" class="col-md-3">
-                        <input type="checkbox" class="form-check-input" name="Penthouse" id="same-address" value="false">
-                        <label class="form-check-label" for="same-address">Penthouse</label>
-                    </div>
+    <div id="F" class="col-sm-6">
+        <label for="firstName" class="form-label">Flor</label>
+        <input type="number" class="form-control" id="firstName" name="Floor" placeholder="">
+    </div>
+    <div id="K" class="col-md-7">
+        <input type="checkbox" class="form-check-input" id="same-address" name="KitchenWithRoom" value="false">
+        <label class="form-check-label" for="save-info">Kitchen combined with a room</label>
+    </div>
+    <div id="P" class="col-md-3">
+        <input type="checkbox" class="form-check-input" name="Penthouse" id="same-address" value="false">
+        <label class="form-check-label" for="same-address">Penthouse</label>
+    </div>
 
-                    <div id="KR" class="col-md-3">
-                        <input type="checkbox" class="form-check-input" id="same-address" name="Kitchen" value="false">
-                        <label class="form-check-label" for="same-address">With kitchen</label>
-                    </div>
-                    <div id="B" class="col-md-3">
-                        <input type="checkbox" class="form-check-input" id="same-address" name="Bathroom" value="false">
-                        <label class="form-check-label" for="same-address">With Bathroom</label>
-                    </div>
-                    <div id="H" class="col-sm-6">
-                        <label for="firstName" class="form-label">How many rooms for one kitch and bath</label>
-                        <input type="number" class="form-control" id="firstName" name="HowManyRoomsForOneKitchAndBath" placeholder="99">
-                    </div>
-                    <button id="But" class="w-100 btn btn-lg btn-primary" type="submit">Add Advert</button>*@
+    <div id="KR" class="col-md-3">
+        <input type="checkbox" class="form-check-input" id="same-address" name="Kitchen" value="false">
+        <label class="form-check-label" for="same-address">With kitchen</label>
+    </div>
+    <div id="B" class="col-md-3">
+        <input type="checkbox" class="form-check-input" id="same-address" name="Bathroom" value="false">
+        <label class="form-check-label" for="same-address">With Bathroom</label>
+    </div>
+    <div id="H" class="col-sm-6">
+        <label for="firstName" class="form-label">How many rooms for one kitch and bath</label>
+        <input type="number" class="form-control" id="firstName" name="HowManyRoomsForOneKitchAndBath" placeholder="99">
+    </div>
+    <button id="But" class="w-100 btn btn-lg btn-primary" type="submit">Add Advert</button>*@
