--- a/NixTrenProperty/Views/Roles/Index.cshtml
+++ b/NixTrenProperty/Views/Roles/Index.cshtml
@@ -5,7 +5,7 @@
 }
 @model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
 
-<h2>Список ролей</h2>
+<h2>List of roles</h2>
 <table class="table">
     @foreach (var role in Model)
     {
@@ -21,5 +21,5 @@
         </tr>
     }
 </table>
-<a asp-action="Create">Добавить роль</a>
-<a asp-action="UserList">Список пользователей</a>
+
+<a asp-action="UserList">List of users</a>
